--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -3,14 +3,14 @@ faculty:
   people:
     - name: Bongani Ngqulunga
       image: /assets/images/jias_bongani.jpg
-      bio: Dr Bongani Ngqulunga, academic, public sector administrator and author, has been appointed as Deputy Director of JIAS. Prior to joining JIAS, he worked in the South African Presidency for more than a decade. He holds a PhD in Sociology from Brown University in the United States, and three degrees from the University of KwaZulu-Natal. His appointment at JIAS became effective in June 2018. In June 2018, Dr Ngqulunga also won the Alan Paton Award for non-fiction for his book *The Man Who Founded the ANC - A Biography of Pixley ka Isaka Seme (Penguin, 2018)*.
+      bio: Dr Bongani Ngqulunga, academic, public sector administrator and author, has been appointed as Deputy Director of JIAS. Prior to joining JIAS, he worked in the South African Presidency for more than a decade. He holds a PhD in Sociology from Brown University in the United States, and three degrees from the University of KwaZulu-Natal. His appointment at JIAS became effective in June 2018. In June 2018, Dr Ngqulunga also won the Alan Paton Award for non-fiction for his book <i>The Man Who Founded the ANC - A Biography of Pixley ka Isaka Seme (Penguin, 2018)</i>.
 
 organisers:
   title: Organisers
   people:
     - name: malebo sephodi
       image: /assets/images/jias_malebo.jpg
-      bio: malebo sephodi is a South African Feminist writer and scholar. She is a doctoral candidate in the Information Systems Department at the University of Cape Town and a 2020 writing fellow at the Johannesburg Institute for Advanced Study. She is interested in the intersections of society and digital technology. Malebo's interdisciplinary work focuses on Accessible Knowledge Production and Dissemination, African Feminism, Decolonisation, Critical Theory, ICT4D, Artificial Intelligence and Digital Technology Education.  malebo is also the recipient of the South African Literary Awards for  First-Time Published Author Award for her non-fiction title Miss Behave (BlackBird Books, 2017).
+      bio: malebo sephodi is a South African Feminist writer and scholar. She is a doctoral candidate in the Information Systems Department at the University of Cape Town and a 2020 writing fellow at the Johannesburg Institute for Advanced Study. She is interested in the intersections of society and digital technology. Malebo's interdisciplinary work focuses on Accessible Knowledge Production and Dissemination, African Feminism, Decolonisation, Critical Theory, ICT4D, Artificial Intelligence and Digital Technology Education.  malebo is also the recipient of the South African Literary Awards for First-Time Published Author Award for her non-fiction title Miss Behave (BlackBird Books, 2017).
 
     - name: Zimasa Ndamase
       image: /assets/images/jias_zimasa.jpg
