--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -27,7 +27,8 @@
     - name: "12:00 - 13:30 Lunch Break"
     - name: "13:30 - 16:30 Group Exercise ([Felix Lennert](https://felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
-    - name: "17:00 - 18:30 [Julia Cagé](https://juliacage.com): TBA"
+    - name: "17:00 - 18:30 [Julia Cagé](https://juliacage.com): Hosting Media Bias -- Evidence from the Universe of French
+Broadcasts, 2002-2020"
     
 - date: 2022-06-23
   name: Scraping Unstructured Formats
