--- a/_data/2022/covenant-university/hero.yml
+++ b/_data/2022/covenant-university/hero.yml
@@ -1,2 +1,2 @@
-header_2: "June 19 to June 29, 2022 | Covenant University"
-location: "SICSS-Nigeria"
+header_2: "June 19 to June 29, 2022 | Covenant University, Ogun State, Nigeria"
+location: "SICSS-Covenant"
