--- a/_data/2022/covenant-university/location.yml
+++ b/_data/2022/covenant-university/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/covenant_uni.jpg
-title: Nigeria
-subtitle: Covenant University
+title: Covenant
+subtitle: Covenant University, Nigeria
 description: "June 19 to June 29, 2022"
 link: covenant-university
 year: 2022
