--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -10,7 +10,7 @@ organisers:
   people:
     - name: malebo sephodi
       image: /assets/images/jias_malebo.jpg
-      bio: malebo sephodi is a South African Feminist writer and scholar. She is a doctoral candidate in the Information Systems Department at the University of Cape Town and a 2020 writing fellow at the Johannesburg Institute for Advanced Study. She is interested in the intersections of society and digital technology. Malebo's interdisciplinary work focuses on Accessible Knowledge Production and Dissemination, African Feminism, Decolonisation, Critical Theory, ICT4D, Artificial Intelligence and Digital Technology Education.  malebo is also the recipient of the South African Literary Awards for First-Time Published Author Award for her non-fiction title Miss Behave (BlackBird Books, 2017).
+      bio: malebo sephodi is a South African Feminist writer and scholar. She is a doctoral candidate in the Information Systems Department at the University of Cape Town and a 2020 writing fellow at the Johannesburg Institute for Advanced Study. She is interested in the intersections of society and digital technology. malebo's interdisciplinary work focuses on Accessible Knowledge Production and Dissemination, African Feminism, Decolonisation, Critical Theory, ICT4D, Artificial Intelligence and Digital Technology Education.  malebo is also the recipient of the South African Literary Awards for First-Time Published Author for her non-fiction title Miss Behave (BlackBird Books, 2017).
 
     - name: Zimasa Ndamase
       image: /assets/images/jias_zimasa.jpg
