--- a/_data/2022/law/faculty.yml
+++ b/_data/2022/law/faculty.yml
@@ -1,1 +1,9 @@
-- name: 
+- name: Rūta Liepiņa
+  image: /assets/images/rūtaLiepiņa.jpeg
+  bio: "Rūta Liepiņa is an Assistant Professor in Digital Legal Studies at the Faculty of Law and a SICSS-Duke 2020 alumna. She holds a PhD degree from European University Institute. Her research interests revolve around the topics of legal reasoning, argumentation, and data science. She is an active member of the AI and law community and participates in the leading conferences and workshops on these topics including ICAIL, JURIX, NLLP, ASAIL, and others."
+  website: https://www.maastrichtuniversity.nl/p70067150
+
+- name: Monika Leszczyńska
+  image: /assets/images/monikaLeszczynska.jpg
+  bio: "Monika Leszczyńska is Assistant Professor of Empirical Legal Research at the Maastricht University Faculty of Law, Netherlands. She received her PhD in law from University of Bonn (Germany). In her research, she uses laboratory and online experiments as well as content analysis to deliver evidence-based insights to legal decision-makers on the impact of law on human behavior. Among others, she has researched how gender quotas influence group cooperation. She also studies how individuals make decisions in the online environment, i.e., how zero-price offers affect people’s decisions about their contractual rights and privacy. This research project has been funded by a Marie Skłodowska-Curie Individual Fellowship."
+  website: https://empiricalcontracts.com/
