--- a/_data/2022/hong-kong/location.yml
+++ b/_data/2022/hong-kong/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/hongkong2.jpeg
 title: Hong Kong
-subtitle: Virtual Event
+subtitle: The Chinese University of Hong Kong
 description: "June 20 to July 1, 2022"
 link: hong-kong
 year: 2022
