--- a/_data/2022/west-central-africa/hero.yml
+++ b/_data/2022/west-central-africa/hero.yml
@@ -1,2 +1,2 @@
-header_2: "June 6 to June 24, 2022 | Yaounde, Cameroon"
+header_2: "June 6 to June 24, 2022 | Douala, Cameroon"
 location: "SICSS-West/Central Africa"
