--- a/_data/2022/west-central-africa/location.yml
+++ b/_data/2022/west-central-africa/location.yml
@@ -1,6 +1,6 @@
-image: /assets/images/cameroon.jpg
+image: /assets/images/douala.jpeg
 title: West/Central Africa
-subtitle: Yaounde, Cameroon
+subtitle: Douala, Cameroon
 description: "June 6 to June 24, 2022"
 link: west-central-africa
 year: 2022
