--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -3,8 +3,7 @@ faculty:
   people:
     - name: Bongani Ngqulunga
       image: /assets/images/jias_bongani.jpg
-      bio: Dr Bongani Ngqulunga, who is the director of the institute is an academic, public sector administrator and author.  Prior to joining JIAS, he worked in the South African Presidency for more than a decade.  He holds a PhD in Sociology from Brown University in the United States and three degrees from the University of KwaZulu-Natal.  His appointment at JIAS became effective in June 2018.  In the same month, Dr Ngqulunga won the Alan Paton Award for non-fiction for his book The Man Who Found the ANC: A Biography of Pixley ka Isaka Seme (Penguin, 2018).
-
+      bio: "Dr Bongani Ngqulunga, who is the director of the institute is an academic, public sector administrator and author.  Prior to joining JIAS, he worked in the South African Presidency for more than a decade.  He holds a PhD in Sociology from Brown University in the United States and three degrees from the University of KwaZulu-Natal.  His appointment at JIAS became effective in June 2018.  In the same month, Dr Ngqulunga won the Alan Paton Award for non-fiction for his book <i>The Man Who Found the ANC: A Biography of Pixley ka Isaka Seme (Penguin, 2018)</i>."
 organisers:
   title: Organisers
   people:
