--- a/_data/2022/india/people.yml
+++ b/_data/2022/india/people.yml
@@ -1,11 +1,6 @@
 faculty:
   title: Co-organizers
   people:
-    - name: Terri Adams, Ph.D.
-      image: /assets/images/TerriAdams.jpg
-      bio: "Terri Adams, Ph.D. is a Professor in the Department of Sociology and Criminology at Howard University, and she currently serves as the Associate Dean for Research with the Graduate School. Additionally, she serves as the Deputy Director of the NOAA Cooperative Science Center for Atmospheric Sciences and Meteorology (NCAS-M) at the university. In addition to her administrative duties, Dr. Adams’ conducts research that takes a multidisciplinary approach to examine issues that have both theoretical and practical implications. Her specific research interests include emergency management, policing, violence, and the impact of trauma and disasters on individuals and organizations. Her most recent work centers on the decision-making processes of both individuals and organizations in the face of crisis events. Her most recent publication, Policing in Disasters: Stress, Resilience, and the Challenges of Emergency Management is co-authored with Dr. Leigh Anderson."      
-      website: https://profiles.howard.edu/profile/41046/terri-adams
-      
     - name: Prof. Ponnurangam Kumaraguru
       image: /assets/images/pk.png
       bio: IIIT Hyderabad
@@ -22,22 +17,41 @@ faculty:
       image: /assets/images/rajiv_ratn_shah.png
       bio: IIIT Delhi
 
-opening:
-  title: Opening Plenary Speaker 
+speakers:
+  title: Speakers
   people:
-    - name: Coming soon...
+    - name: Prof. Jisun AN
+      image: /assets/images/jisun_an.png
+      bio: Singapore Management University
 
-keynote:
-  title: SICSS-Howard/Mathematica 2022 Keynote Speaker 
-  people:
-    - name: Coming soon...
+    - name: Ms. Megha Arora
+      image: /assets/images/megha_arora.png
+      bio: Palantir Technologies
 
-closing:
-  title: Closing Plenary Speaker 
-  people:
-    - name: Coming soon...
+    - name: Dr. Monojit Choudhary
+      image: /assets/images/monojit_choudhary.png
+      bio: Microsoft Research
 
-speakers: 
-  title: Guest Speakers 
-  people:
-    - name: Coming soon...
+    - name: Dr. Kiran Garimella
+      image: /assets/images/kiran_garimella.png
+      bio: Rutgers University
+
+    - name: Prof. Srijan Kumar
+      image: /assets/images/srijan_kumar.png
+      bio: Georgia Institute of Technology
+
+    - name: Dr. Hemank Lamba
+      image: /assets/images/hemank_lamba.png
+      bio: Dataminr
+
+    - name: Prof. Aditya Medury
+      image: /assets/images/aditya_medury.png
+      bio: IIT Kanpur
+
+    - name: Dr. Niharika Sachdeva
+      image: /assets/images/niharika_sachdeva.png
+      bio: Naukri.com
+
+    - name: Prof. Rajiv Ratn Shah
+      image: /assets/images/rajiv_ratn_shah.png
+      bio: IIIT Delhi
