--- a/_data/2022/rochester/speakers.yml
+++ b/_data/2022/rochester/speakers.yml
@@ -13,7 +13,7 @@
   bio: "Onur Varol is an Assistant Professor in the Computer Science Department at Sabanci University, and has an affiliation with the Center of Excellence for Data Analytics. Onur is the director of VIRAL Lab which focuses on computational social science, networks, and machine learning. During his PhD at Indiana University, Onur was a proud member of NaN group and focused on the detection of persuasion campaigns and social bots using the tools of machine learning, data mining, and network analysis. Onur developed a social bot detection system Botometer (aka BotOrNot). Onur closely worked with Filippo Menczer, Alessandro Flammini, and Emilio Ferrara on various projects related with detection of manipulation on social media."
   website: http://www.onurvarol.com/
   
-- name: Elya Zhang Varol
+- name: Elya Zhang
   image: /assets/images/e_zhang.jpeg
   bio: "Maps, foreign loans, and East Asian History are my specialty. In my research and teaching, I explore the financial and spatial history of capitalism, with China as my corner stone. I have taught fourteen different Asia-related courses and have completed a book manuscript on China’s foreign borrowing from America. As a teacher-scholar, I have also systematically tested the integration of scientific map-making into undergraduate research and have attracted 252 students from 51 majors to experiment outside their comfort zones."
   website: http://zhang.digitalscholar.rochester.edu/home/
