--- a/_data/2022/jogja/speakers.yml
+++ b/_data/2022/jogja/speakers.yml
@@ -32,3 +32,8 @@
   image: /assets/images/GeorgeBerry.jpg
   bio: "George is a sociologist, data scientist, experimentalist, and builder. His academic interests include social contagion, homophily in networks, online conversations, and experimental design. He currently works as a Machine Learning Engineer at Blue Rose Research, where he focuses on modeling and measurement."
   website: https://georgeberry.github.io/
+  
+- name: Claudia Flores-Saviaga
+  image: /assets/images/ClaudiaFloresSaviaga.jpg
+  bio: "Claudia Flores-Saviaga is a Fellow at Facebook Research. She is also a Ph.D. candidate in the Citizen AI Lab at Northeastern University. Her research involves the areas of Artificial Intelligence, Crowdsourcing, and Social Computing. She is interested in understanding how \"bad actors\" organize disinformation and propaganda messages, and how other citizens organize to debunk those manipulative campaigns. She uses this knowledge to then design intelligent systems that can fight disinformation at scale. She started her exploration of online spaces analyzing how political trolls were organizing during the 2016 US presidential elections.  Her research has been covered by the Associated Press, Newsweek, Buzzfeed, El País and Slate."
+  website: http://saviaga.com/
