--- a/_data/2022/bologna/hero.yml
+++ b/_data/2022/bologna/hero.yml
@@ -1,2 +1,2 @@
-header_2: "20 June to 1 July 2022 | University of Bologna"
+header_2: "6 to 16 June 2022 | University of Bologna"
 location: "SICSS-Bologna"
