--- a/_data/2022/atlanta/location.yml
+++ b/_data/2022/atlanta/location.yml
@@ -1,4 +1,4 @@
-image: /assets/images/atlanta.jpg
+image: /assets/images/ATL_Jackson_Street_Image_resized.jpg
 title: Atlanta
 subtitle: Georgia State University
 description: "June 19 to June 29, 2022"
