--- a/_data/2022/rochester/speakers.yml
+++ b/_data/2022/rochester/speakers.yml
@@ -1,5 +1,5 @@
 - name: Keynote Speaker: Gary King
-  image: 
+  image: /assets/images/g_king.jpeg
   bio: "Gary King is the Albert J. Weatherhead III University Professor at Harvard University -- one of 25 with Harvard's most distinguished faculty title -- and Director of the Institute for Quantitative Social Science. King develops and applies empirical methods in many areas of social science, focusing on innovations that span the range from statistical theory to practical application.King is an elected Fellow in 8 honorary societies (National Academy of Sciences, American Statistical Association, American Association for the Advancement of Science, American Academy of Arts and Sciences, Society for Political Methodology, National Academy of Social Insurance, American Academy of Political and Social Science, and the Guggenheim Foundation) and has won more than 55 prizes and awards for his work. King was elected President of the Society for Political Methodology and Vice President of the American Political Science Association. He has been a member of the Senior Editorial Board at Science, Visiting Fellow at Oxford, and Senior Science Adviser to the World Health Organization.  He has written more than 185 journal articles, 20 open source software packages, and 8 books.
   website: https://gking.harvard.edu/
 
@@ -20,7 +20,7 @@
   
 - name: Jonathan Herington
   image: /assets/images/j_herington.jpeg
-  bio: "I am an Assistant Professor of Philosophy, and Assistant Director of Graduate Education in the College of Arts, Sciences, and Engineering, at the University of Rochester. Between 2014 and 2019 I was an Assistant Professor in the Department of Philosophy at Kansas State University. Previously I was a Research Fellow in the Medicine, Ethics, Society and History unit of the University of Birmingham. I completed my PhD in the School of Philosophy, at the Australian National University. I am a native of Brisbane, Australia and recieved a BA (Hons I) in International Relations and Philosophy, and a BSc in Microbiology, from the University of Queensland. Prior to undertaking my PhD I was located at the Centre for International Security Studies, University of Sydney."
+  bio: "Jonathan Herington an Assistant Professor of Philosophy, and Assistant Director of Graduate Education in the College of Arts, Sciences, and Engineering, at the University of Rochester. Between 2014 and 2019 I was an Assistant Professor in the Department of Philosophy at Kansas State University. Previously Jonathan was a Research Fellow in the Medicine, Ethics, Society and History unit of the University of Birmingham. Jonathan completed my PhD in the School of Philosophy, at the Australian National University. Jonathan is a native of Brisbane, Australia and recieved a BA (Hons I) in International Relations and Philosophy, and a BSc in Microbiology, from the University of Queensland. Prior to undertaking my PhD Jonathan was located at the Centre for International Security Studies, University of Sydney."
   website: https://jherington.com/
   
 - name: Mayya Komisarchik
@@ -35,5 +35,5 @@
   
 - name: Elya Zhang
   image: /assets/images/e_zhang.jpeg
-  bio: "Maps, foreign loans, and East Asian History are my specialty. In my research and teaching, I explore the financial and spatial history of capitalism, with China as my corner stone. I have taught fourteen different Asia-related courses and have completed a book manuscript on China’s foreign borrowing from America. As a teacher-scholar, I have also systematically tested the integration of scientific map-making into undergraduate research and have attracted 252 students from 51 majors to experiment outside their comfort zones."
+  bio: "Maps, foreign loans, and East Asian History are Elya's specialty. In her research and teaching, Elya explores the financial and spatial history of capitalism, with China as my corner stone. Elya has taught fourteen different Asia-related courses and have completed a book manuscript on China’s foreign borrowing from America. As a teacher-scholar, Elya has also systematically tested the integration of scientific map-making into undergraduate research and have attracted 252 students from 51 majors to experiment outside their comfort zones."
   website: http://zhang.digitalscholar.rochester.edu/home/
