--- a/_data/2022/rochester/speakers.yml
+++ b/_data/2022/rochester/speakers.yml
@@ -5,7 +5,7 @@
 
 - name: Elliott Ash
   image: /assets/images/e_ash.jpg
-  bio: "Elliott Ash is Assistant Professor of Law, Economics, and Data Science at ETH Zurich''s Center for Law & Economics, Switzerland. Prior to joining ETH, Elliott was Assistant Professor of Economics at University of Warwick, and before that a Postdoctoral Research Associate at Princeton University’s Center for the study of Democratic Politics. He received a Ph.D. in economics and J.D. from Columbia University, a B.A. in economics, government, and philosophy from University of Texas at Austin, and an LL.M. in international criminal law from University of Amsterdam."
+  bio: "Elliott Ash is Assistant Professor of Law, Economics, and Data Science at ETH Zurich's Center for Law & Economics, Switzerland. Prior to joining ETH, Elliott was Assistant Professor of Economics at University of Warwick, and before that a Postdoctoral Research Associate at Princeton University’s Center for the study of Democratic Politics. He received a Ph.D. in economics and J.D. from Columbia University, a B.A. in economics, government, and philosophy from University of Texas at Austin, and an LL.M. in international criminal law from University of Amsterdam."
   website: https://elliottash.com/
 
 - name: Dino P. Christenson
