--- a/_data/2022/rochester/speakers.yml
+++ b/_data/2022/rochester/speakers.yml
@@ -1,6 +1,6 @@
 - name: Keynote Speaker: Gary King
   image: /assets/images/g_king.jpeg
-  bio: "-"
+  bio: "--"
   website: https://gking.harvard.edu/
 
 - name: Elliott Ash
