--- a/_data/2022/rochester/speakers.yml
+++ b/_data/2022/rochester/speakers.yml
@@ -35,5 +35,5 @@
   
 - name: Elya Zhang
   image: /assets/images/e_zhang.jpeg
-  bio: "Maps, foreign loans, and East Asian History are Elya's specialty. In her research and teaching, Elya explores the financial and spatial history of capitalism, with China as my corner stone. Elya has taught fourteen different Asia-related courses and have completed a book manuscript on China’s foreign borrowing from America. As a teacher-scholar, Elya has also systematically tested the integration of scientific map-making into undergraduate research and have attracted 252 students from 51 majors to experiment outside their comfort zones."
+  bio: "Maps, foreign loans, and East Asian History are Elya’s specialty. In her research and teaching, Elya explores the financial and spatial history of capitalism, with China as my corner stone. Elya has taught fourteen different Asia-related courses and have completed a book manuscript on China’s foreign borrowing from America. As a teacher-scholar, Elya has also systematically tested the integration of scientific map-making into undergraduate research and have attracted 252 students from 51 majors to experiment outside their comfort zones."
   website: http://zhang.digitalscholar.rochester.edu/home/
