--- a/_data/2022/taiwan/people.yml
+++ b/_data/2022/taiwan/people.yml
@@ -11,13 +11,13 @@ participants:
 organizers:
   title: Organizer
   people:
-    - name: Robin Lee
+    - name: "Robin Lee"
       image: /assets/images/RobinLee.jpg
       bio: "Robin Lee is a PhD student in Sociology at Princeton University. He is the Lead Organizer of SICSS-Taiwan 2022. He worked in the New York Times and United Health Care in data analytics. He is interested in organizational sociology, technology studies, content moderation, and fairness in machine learning. Robin is passionate about creating communities for newcomers in programming and data science. He is the co-founder of Taiwanese Data Professionals. He began learning violin online during the pandemic. He enjoys hiking and skiing."
       website: https://twitter.com/RobinCRLee
-    - name: Ming-Hung Wang
+    - name: "Ming-Hung Wang"
       image: /assets/images/MingHungWang.jpg
-      bio: "Ming-Hung Wang is an assistant professor in the Department of Computer Science and Information Engineering of National Chung Cheng University, Taiwan. He is the Program Chair of SICSS-Taiwan 2022. He received his PhD degree in Electrical Engineering from National Taiwan University in 2017. He is the PI of Digital Society and Security Lab (DIGI-SSL). The group uses data science and computational methodology to investigate issues related to computational social science and network security. Currently, his team is working on integrating statistical learning, graph theory, and data visualization to understand information dissemination and information operation on large-scale social media platforms (Facebook, PTT, Instagram, Tiktok, etc.). Their daily works include analyzing the source of the dis/misinformation, identifying malicious accounts/sockpuppets, and exploring various social media security issues.In his free time, he loves playing guitar. His favorite bands are 伍佰 & China Blue and Oasis. He is a loyal baseball fan although he can only pitch at 100km/h.
+      bio: "Ming-Hung Wang is an assistant professor in the Department of Computer Science and Information Engineering of National Chung Cheng University, Taiwan. He is the Program Chair of SICSS-Taiwan 2022. He received his PhD degree in Electrical Engineering from National Taiwan University in 2017. He is the PI of Digital Society and Security Lab (DIGI-SSL). The group uses data science and computational methodology to investigate issues related to computational social science and network security. Currently, his team is working on integrating statistical learning, graph theory, and data visualization to understand information dissemination and information operation on large-scale social media platforms (Facebook, PTT, Instagram, Tiktok, etc.). Their daily works include analyzing the source of the dis/misinformation, identifying malicious accounts/sockpuppets, and exploring various social media security issues.In his free time, he loves playing guitar. His favorite bands are 伍佰 & China Blue and Oasis. He is a loyal baseball fan although he can only pitch at 100km/h."
       website: https://sites.google.com/view/mhwang    
       
 
