--- a/_data/2022/aachen-graz/schedule.yml
+++ b/_data/2022/aachen-graz/schedule.yml
@@ -2,39 +2,52 @@
 
 - date: July 17, 2022
   events:
-    - name: "18:00 Meet-and-greet"
+    - name: "Meet-and-greet"
 
 - date: July 18, 2022
   events:
     - name: "What is computational social science (CSS) really? *by Ivan Smirnov*"
     - name: "How digital trace data could help to answer social science questions? *by Ivan Smirnov*"
-    - name: "Introduction to using the Twitter API to collect insane amounts of data. *by Suhem Parack*"
+    - name: "Guest lecture: Introduction to using the Twitter API to collect insane amounts of data *by Suhem Parack*"
    
 - date: July 19, 2022
   events:
-    - name: "Harnessing web scraping and APIs to collect data. *by Jana Lasser*"
-    - name: "Digitally powered surveys. *by Jana Lasser*"
+    - name: "Harnessing web scraping and APIs to collect data *by Jana Lasser*"
+    - name: "Digitally powered surveys *by Jana Lasser*"
 
 - date: July 20, 2022
   events:
-    - name: "Combining surveys and Big Data. *by David Garcia*"
-    - name: "Introduction to networks in CSS. *by Markus Strohmaier*"
+    - name: "Combining surveys and Big Data *by David Garcia*"
+    - name: "Introduction to networks in CSS *by Markus Strohmaier*"
    
 - date: July 21, 2022
   events:
-    - name: "How to write a (good!) CSS paper. *by Ivan Smirnov*"
-    - name: "Visualize your data: DOs and DON’Ts. *by Jana Lasser*"
+    - name: "How to write a (good!) CSS paper *by Ivan Smirnov*"
+    - name: "Visualize your data: DOs and DON’Ts *by Jana Lasser*"
 
 - date: July 22, 2022
   events:
-    - name: "Potential pitfalls and problems for awesome CSS projects. *by Ivan Smirnov*"
-    - name: "Ethical dimensions of CSS research. *by Jana Lasser*"
+    - name: "Potential pitfalls and problems for awesome CSS projects *by Ivan Smirnov*"
+    - name: "Ethical dimensions of CSS research *by Jana Lasser*"
 
 - date: July 25, 2022
   events:
-    - name: "Working on CSS projects in teams"
-    - name: "TBA *by Chris Bail*"
+    - name: "Work on group projects"
+    - name: "Guest lecture: TBA *by Chris Bail*"
 
-- date: July 26–29, 2022
+- date: July 26, 2022
   events:
-    - name: "Working on CSS projects in teams"
+    - name: "Work on group projects"
+
+- date: July 27, 2022
+  events:
+    - name: "Work on group projects"
+
+- date: July 28, 2022
+  events:
+    - name: "Work on group projects"
+
+- date: July 29, 2022
+  events:
+    - name: "Project presentations"
+    - name: "Debrief and Conclusion"
