--- a/_data/2022/haifa/location.yml
+++ b/_data/2022/haifa/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/haifa.jpg
 title: Haifa
-subtitle: Virtual Event
+subtitle: University of Haifa
 description: "July 3 to July 14, 2022"
 link: haifa
 year: 2022
