--- a/_data/2022/sydney/speakers.yml
+++ b/_data/2022/sydney/speakers.yml
@@ -1,1 +1,9 @@
-- name:
+name: Timothy Graham
+image: /assets/images/TimGraham.png
+bio: Dr Timothy Graham is Senior Lecturer in Digital Media at the Queensland University of Queensland (QUT). His research combines computational methods with social theory to study online networks and platforms, with a particular interest in online bots and trolls, disinformation, and online ratings and rankings devices. He develops open source software tools for social media data analysis, and has published in journals such as Information, Communication & Society, Information Polity, Big Data & Society, and Social Media + Society. In 2021, Tim was announced as an ARC Discovery Early Career Researcher Award recipient and was awarded funding for his project, Combating Coordinated Inauthentic Behaviour on Social Media.
+website: https://www.qut.edu.au/about/our-people/academic-profiles/timothy.graham
+
+name: Jason Thompson
+image: /assets/images/JThompson.jpg
+bio: A/Prof Thompson works at the University of Melbourne’s Transport, Health and Urban Design (THUD) Research Laboratory within the Melbourne School of Design. Here, he focuses on the translation of research into practice across the areas of urban design, transportation safety, public health, post-injury rehabilitation, public policy, and health system design. His work has pioneered the use of agent-based models and computational social science in areas of traditional health and insurance system design, urban design, infectious disease, and transportation safety. A/Prof Thompson holds a PhD in Medicine, Masters in Clinical Psychology, and a Bachelor of Science with Honours and is a current Australian Research Council Discovery Early Career Award (DECRA) Fellow. 
+website: https://msd.unimelb.edu.au/about/our-people/academic/jason-thompson
