--- a/_data/2022/jogja/speakers.yml
+++ b/_data/2022/jogja/speakers.yml
@@ -42,3 +42,8 @@
   image: /assets/images/ClaudiaFloresSaviaga.jpg
   bio: "Claudia Flores-Saviaga is a Fellow at Facebook Research. She is also a Ph.D. candidate in the Citizen AI Lab at Northeastern University. Her research involves the areas of Artificial Intelligence, Crowdsourcing, and Social Computing. She is interested in understanding how \"bad actors\" organize disinformation and propaganda messages, and how other citizens organize to debunk those manipulative campaigns. She uses this knowledge to then design intelligent systems that can fight disinformation at scale. She started her exploration of online spaces analyzing how political trolls were organizing during the 2016 US presidential elections.  Her research has been covered by the Associated Press, Newsweek, Buzzfeed, El País and Slate."
   website: http://saviaga.com/
+  
+- name: Sandy Ritchie
+  image: /assets/images/SandyRitchie.jpg
+  bio: "Sandy is a linguist working on internationalization for speech technology at Google. His research interests are in morphosyntax, linguistic typology and scaling language technology to a more diverse range of languages all around the world. Before joining Google, he received a PhD and conducted postdoctoral research at SOAS, University of London."
+  website: https://research.google/people/106369/
